[project]
name = "paratranz-py"
version = "0.1.0"
description = "A simple ParaTranz Python Package"
authors = [
    {name = "Miku",email = "26039249+xMikux@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pooch (>=1.8.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [
    { include = "paratranz" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
